<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/common_spacing"
    tools:context=".ui.FilterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_close"
            android:layout_width="@dimen/space12x"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_blue"
            app:cornerRadius="@dimen/space2x"
            app:iconTint="@color/white"
            app:icon="@drawable/ic_baseline_close_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space2x"
            android:layout_weight="40"
            android:fontFamily="@font/mark_pro_bold"
            android:gravity="center"
            android:text="@string/text_filter_option"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/text_16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/main_orange"
            android:text="@string/text_done"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="@dimen/space2x" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space6x"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/common_spacing"
            android:fontFamily="@font/mark_pro_bold"
            android:text="@string/text_brand"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/text_16sp" />

        <Spinner
            android:id="@+id/spinner_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/common_spacing"
            android:fontFamily="@font/mark_pro_bold"
            android:text="@string/text_price"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/text_16sp" />

        <Spinner
            android:id="@+id/spinner_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/common_spacing"
            android:fontFamily="@font/mark_pro_bold"
            android:text="@string/text_size"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/text_16sp" />

        <Spinner
            android:id="@+id/spinner_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>