<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    android:padding="16dp"
    tools:context=".ui.ListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout_bt_phones"
            android:orientation="vertical"
            android:layout_margin="@dimen/space3x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/bt_phones"
                android:layout_width="@dimen/category_button_min_size"
                android:layout_height="@dimen/category_button_min_size"
                android:layout_margin="7dp"
                android:background="@drawable/background_favorite_icon"
                android:checkable="true"
                android:elevation="8dp" />

            <TextView
                android:id="@+id/text_bt_phones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mark_pro_bold"
                android:gravity="center"
                android:text="@string/text_phones"
                android:textColor="@color/main_orange"
                android:textSize="@dimen/text_12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/barrier" />
        </LinearLayout>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="layout_bt_phones" />

        <TextView
            android:id="@+id/text_select_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:fontFamily="@font/mark_pro_bold"
            android:gravity="center"
            android:text="@string/text_select_category"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/text_25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/barrier" />

        <TextView
            android:id="@+id/bt_view_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:fontFamily="@font/mark_pro_bold"
            android:gravity="center"
            android:text="@string/text_view_all"
            android:textColor="@color/main_orange"
            android:textSize="@dimen/text_15sp"
            app:layout_constraintBottom_toBottomOf="@id/text_select_category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_select_category" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_store_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_select_category"
            tools:listitem="@layout/card_home_store" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bestseller_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_store_list"
            tools:listitem="@layout/card_bestseller" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>