<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_gray"
        android:orientation="vertical"
        android:padding="@dimen/space3x">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_location" />

                <Spinner
                    android:id="@+id/spinner_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/bt_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_filter" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_select_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/common_spacing"
                android:layout_weight="0.7"
                android:fontFamily="@font/mark_pro_bold"
                android:gravity="start"
                android:text="@string/text_select_category"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/text_25sp" />

            <TextView
                android:id="@+id/bt_view_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/mark_pro_bold"
                android:gravity="center"
                android:padding="@dimen/space2x"
                android:text="@string/text_view_all"
                android:textColor="@color/main_orange"
                android:textSize="@dimen/text_15sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/space6x"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/card_category" />

        <LinearLayout
            android:id="@+id/search_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_view"
                android:layout_width="@dimen/search_width"
                android:layout_height="@dimen/search_height"
                android:background="@drawable/background_search_view"
                android:textColor="@color/light_gray"
                app:iconifiedByDefault="false"
                app:queryBackground="@android:color/transparent"
                app:queryHint="@string/text_search" />

            <ImageView
                android:id="@+id/bt_qr_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space3x"
                android:background="@drawable/background_search_icon" />
        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>